# whisper-transcriber

./: .copilot_todo  .dockerignore  .env.example  .env.production.template  .gitignore  .repo_hygiene.conf  94de520c-50d9-4293-9bfb-edd809af1b79  =2.8.0  =7.0.0  AGENTS.md  APPLICATION_REVIEW_RECOMMENDATIONS.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPREHENSIVE_TESTING_ROADMAP.md  CONTRIBUTING.md  DEPENDENCIES.md  DOCUMENT_CONSOLIDATION.md  Dockerfile  Dockerfile.new  Dockerfile.optimized  Dockerfile.production  FRONTEND_FUNCTION_TEST_MAP.md  FUNCTIONS.md  ISSUE_TRACKING.md  LICENSE  MISSION_ACCOMPLISHED.md  Makefile  PRIORITY_ACTIONS.md  README.md  REPOSITORY_ORGANIZATION.md  REVIEW_GUIDE.md  SECURITY.md  TASKS.md  Whisper_Design.md  alembic.ini  all_files.txt  app.db.backup  app.py  (+43 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
GC_Analysis/: .dockerignore  Dockerfile  README.md  alembic.ini  compare_local_remote.sh  cypress.config.js  docker-compose.yml  local_files_pruned.txt  pyproject.toml  requirements.txt  worker.py
api/: app_state.py  app_worker.py  config.py  config_validator.py  database_performance_monitor.py  errors.py  exceptions.py  main.py  metadata_writer.py  models.py  models_optimized.py  optimized_database_config.py  optimized_orm_bootstrap.py  orm_bootstrap.py  paths.py  performance_middleware.py  router_setup.py  schemas.py  schemas_app.py  settings.py  worker.py
app/: app.py  job_store.py  main.py  requirements.txt  schemas.py  security_middleware.py  transcribe.py
config/: production.json  (+2 more)
(+1551 files in other folders)
